fixed alignments and sizing.

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,22 +26,3 @@ body {
     text-wrap: balance;
   }
 }
-
-.grid-container {
-  height: 100%;
-  width: 100%;
-}
-.ag-grid .ag-cell {
-  padding: 0.5rem;
-  font-size: 1rem;
-  color: #4b5563;
-  border-color: #e5e7eb;
-  line-height: 1.5;
-}
-.ag-grid .ag-header-cell {
-  font-weight: 600;
-  font-size: 1rem;
-  color: #374151;
-  background-color: #f9fafb;
-  border-color: #e5e7eb;
-}
